# paddock-manager

./: .gitignore  CMakeLists.txt  README.md  download_sqlite.sh  test.db
data/sql/: tables.sql
data/ui/: io.github.paddock.cmb  io.github.paddock.ui
include/: CMakeLists.txt
include/car/: car.h
include/circuit/: circuit.h  sector.h  sector_type.h
include/database/: database.h
include/driver/: driver.h
include/race_runner/: racing_car.h  racing_tyre.h  runner.h
include/ui/: main_window.h
libs/: CMakeLists.txt
libs/sqlite3/: CMakeLists.txt  download_sqlite.sh  sqlite3_hash.txt
sqlite3/: sqlite3_hash.txt
src/: CMakeLists.txt  main.c
src/car/: car.c
src/circuit/: circuit.c  sector.c
src/database/: database.c
src/race_runner/: racing_car.c  racing_tyre.c  runner.c
src/ui/: main_window.c
test/: CMakeLists.txt
test/car/: test_car.c
test/circuit/: test_circuit.c  test_sector.c
test/database/: test_database.c
test/race_runner/: test_racing_car.c  test_racing_tyre.c  test_runner.c
